Change log
==========
2.1.7
------
Added some logs to the Tequila Client lib

2.1.6
------
Remove unused import of RequestSite

2.1.5
------
Moved to Django 1.10

2.1.4
------
Fix wrong import for Python 3
Fix for admin url

2.1.3
------
Moved to Django 1.9

2.1.2
-----
Added some documentation on multiple configuration

2.1.1
-----
Fix redirect to a HTTPS URL

2.1.0
-----
Python 3 compatibility

2.0.4
-----
Django is no more required, only recommended

2.0.3
-----
Moved to Django 1.8

2.0.2
-----
Fix for the new Tequila username model

2.0.1
-----
Apply any changes found from Tequila to the local model now

2.0.0
-----
Moved to Django 1.6

1.9.6
-----
Fix for doc

1.9.5
-----
TEQUILA_CLEAN_URL work with Django 1.5+ now

1.9.4
-----
Allow to set server_url from settings

1.9.3
-----
* Fixed versionning

1.9.2
------
* Fixed missing server_url parameter

1.9.1
-----
* Switched repository to git
* Fixed typos in documentation
* improved distribution

1.9
---
* Added strong authentication option

1.8
---
..      Warning::
	Users have a sciper that is a string now, switching from int to string in the profile model for the sciper.
	
1.7
---
* Fixed too long first-name if truncate is possible
* Added admin view for profile

1.6
---
* Moved to Django 1.4

1.5
---
* Allowed redirection after a logout
* Added an optional way to remove the disgracious 'key' parameter from url

1.4
---
* Added Admin Site configuration and examples

1.3
---
* Added TEQUILA_CONFIG_ALLOW option to set a custom allow parameter
* Added TEQUILA_CONFIG_ADDITIONAL option to set a custom parameter

1.2
---
* Added "memberof" attribute
* Tequila python client doesn't need django anymore
	
..	Warning::
	You have to change your settings to "AUTHENTICATION_BACKENDS = ('django_tequila.django_backend.TequilaBackend',)" if you used the 1.1 version
	
1.1
---
* Better url separation
* Easier installation by using pip or python setup.py install
* Renamed from tequila-django to django-tequila